[gd_scene load_steps=2 format=3 uid="uid://b78jdwqa4vgf0"]

[ext_resource type="Script" path="res://UI/extractorBuildButton/extractorBuildButton.gd" id="1_klwmi"]

[node name="ExtractorBuildButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klwmi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 225.0

[node name="ExtractorName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 224.0
offset_bottom = 37.0
scale = Vector2(1.5, 1.5)
text = "Extractor Name Long Name"

[node name="Consumption" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 73.0
text = "Consumes:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ConsumptionMats" type="Label" parent="Panel/Consumption"]
layout_mode = 0
offset_left = 95.0
offset_right = 460.0
offset_bottom = 23.0
text = "Money:  5     Energy:  10     Building Materials:  5"
vertical_alignment = 1

[node name="Production" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 103.0
text = "Produces:"
vertical_alignment = 1

[node name="ProductionMats" type="Label" parent="Panel/Production"]
layout_mode = 0
offset_left = 90.0
offset_right = 435.0
offset_bottom = 23.0
text = "Consumer Goods:  5     Building Materials:  3"
vertical_alignment = 1

[node name="BuildButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 250.0
offset_top = 175.0
offset_right = 430.0
offset_bottom = 211.0
text = "Insufficient Materials"

[node name="ReqRegion" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 240.0
offset_top = 115.0
offset_right = 459.0
offset_bottom = 138.0
text = "Required Region: Mountains"
vertical_alignment = 1

[node name="ReqNode" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 240.0
offset_top = 145.0
offset_right = 465.0
offset_bottom = 168.0
text = "Required Node:    Platinum"
vertical_alignment = 1

[node name="ConstructionCost" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 115.0
offset_right = 160.0
offset_bottom = 138.0
text = "Construction Cost:"
vertical_alignment = 1

[node name="ConstructionMats" type="Label" parent="Panel/ConstructionCost"]
layout_mode = 0
offset_left = 10.0
offset_top = 25.0
offset_right = 200.0
offset_bottom = 100.0
text = "Money:  450
Building Materials:  350
Composites:  175"

[connection signal="pressed" from="Panel/BuildButton" to="." method="_on_build_button_pressed"]
